@@ -1,5 +1,8 @@
 2017-09-16  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/pages/show_all_results.css:
+	Modify styles.
+
 	* tryXpath/popup/popup.css:
 	Define styles.
 	Modify styles.
